--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,16 @@ buildscript {
     }
 }
 
+ext {
+    retrofit_version = '2.3.0'
+    rxjava2_version = '2.1.8'
+    rxandroid_version = '2.0.1'
+    dagger2_version = '2.15'
+
+    recyclerview_version = "1.0.0"
+    cardview_version = "1.0.0"
+}
+
 allprojects {
     repositories {
         google()
