--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ ext {
     rxjava2_version = '2.1.8'
     rxandroid_version = '2.0.1'
     dagger2_version = '2.15'
+    okhttp_version = '3.10.0'
 
     recyclerview_version = "1.0.0"
     cardview_version = "1.0.0"
